box Overlap error solved

--- a/src/components/searchBar/searchbar.module.css
+++ b/src/components/searchBar/searchbar.module.css
@@ -5,6 +5,7 @@
   height: 300px;
   margin-top: 60px;
   flex-direction: column;
+  align-items: center;
 }
 
 .divider {
@@ -16,13 +17,21 @@
 
 .searchBoxTitle {
   width: 100%;
-  height: 100px;
+  height: 50px;
   text-align: center;
   font-size: 1.2rem;
   font-weight: 400;
   line-height: 1.5;
+  position: relative;
 }
 
 .searchInput {
-  width: 300px;
+  width: 500px;
+  height: 50px;
+  border-radius: 28px;
+  font-size: 1.2rem;
+  text-align: center;
+  background-color: rgba(29, 192, 120, 0.12);
+  border: 1px solid rgba(29, 192, 120, 0.24);
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 10%);
 }
